hat opwrapper removal round 2