@@ -25,6 +25,7 @@
 package hat.optools;
 
 
+import jdk.incubator.code.dialect.core.CoreOp;
 import jdk.incubator.code.dialect.java.JavaOp;
 
 import java.lang.invoke.MethodHandles;
@@ -36,14 +37,14 @@ public class TernaryOpWrapper extends OpWrapper<JavaOp.ConditionalExpressionOp> 
     }
 
     public Stream<OpWrapper<?>> conditionWrappedYieldOpStream() {
-        return wrappedYieldOpStream(op.bodies().getFirst().entryBlock()/*,firstBlockOfBodyN(0)*/);
+        return op.bodies().get(0).entryBlock().ops().stream().filter(o->o instanceof CoreOp.YieldOp).map(o->wrap(lookup,o));
     }
 
     public Stream<OpWrapper<?>> thenWrappedYieldOpStream() {
-        return wrappedYieldOpStream(op.bodies().get(1).entryBlock()/*firstBlockOfBodyN(1)*/);
+        return op.bodies().get(1).entryBlock().ops().stream().filter(o->o instanceof CoreOp.YieldOp).map(o->wrap(lookup,o));
     }
 
     public Stream<OpWrapper<?>> elseWrappedYieldOpStream() {
-        return wrappedYieldOpStream(op.bodies().get(2).entryBlock()/*firstBlockOfBodyN(2)*/);
+        return op.bodies().get(2).entryBlock().ops().stream().filter(o->o instanceof CoreOp.YieldOp).map(o->wrap(lookup,o));
     }
 }
